<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@drawable/login_bg"--><!--android:orientation="vertical"--><!--tools:context=".view.LoginActivity">-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/login_bg"
  android:orientation="vertical"
  tools:context=".modules.login.LoginActivity">

  <android.support.constraint.Guideline
    android:id="@+id/left_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.125" />

  <android.support.constraint.Guideline
    android:id="@+id/right_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.875" />

  <android.support.constraint.Guideline
    android:id="@+id/top_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0" />

  <android.support.constraint.Guideline
    android:id="@+id/bottom_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="178dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintGuide_percent="1" />

  <LinearLayout
    android:id="@+id/wrapper"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
    app:layout_constraintRight_toRightOf="@+id/right_guideline"
    app:layout_constraintTop_toTopOf="@+id/top_guideline">

    <ImageView
      android:layout_width="@dimen/brand_width"
      android:layout_height="@dimen/brand_height"
      android:layout_marginTop="80dp"
      android:src="@drawable/brand"/>

    <LinearLayout
      android:id="@+id/edit_container"
      android:layout_width="match_parent"
      android:layout_height="@dimen/edit_container_height"
      android:layout_marginTop="@dimen/edit_container_top"
      android:paddingVertical="@dimen/edit_container__padding"
      android:background="@drawable/round_rect_shape"
      android:gravity="center"
      android:orientation="vertical">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="false"
        app:counterMaxLength="11">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/mobile_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:hint="请输入手机号"
          android:inputType="number"
          android:paddingLeft="15dp" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/password_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:hint="请输入密码"
          android:inputType="textPassword"
          android:paddingLeft="15dp" />
      </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/edit_container"
      android:layout_marginVertical="@dimen/divider__margin"
      android:background="@color/dividerColor">

    </View>

    <RelativeLayout
      android:id="@+id/buttons_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/round_rect_btn"
        android:gravity="center"
        android:textSize="19sp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:onClick="onLoginButtonClicked"/>
      <Button
        android:id="@+id/loginlater_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/round_rect_btn"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_below="@id/login_button"
        android:onClick="onLoginLater"
        android:textSize="19sp"
        android:text="@string/loginlater"
        android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
      android:id="@+id/option_actions"
      android:layout_width="match_parent"
      android:layout_height="20dp"
      android:layout_marginTop="@dimen/option_actions__margin_top"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/goto_register"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/goto_register__margin_h"
        android:text="@string/user_register"
        android:textSize="15sp"
        android:clickable="true"
        android:onClick="onRegisterClicked"
        android:textColor="@color/white" />

      <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/dividerColor"
        android:backgroundTint="@color/white">

      </View>

      <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/goto_register__margin_h"
        android:text="@string/forget_pwd"
        android:textSize="15sp"
        android:clickable="true"
        android:onClick="onForgetPasswordClicked"
        android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/slogan__margin_bottom"
      android:orientation="vertical"
      android:gravity="center">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/slogan_zh"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/slogan_en"/>

    </LinearLayout>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
