<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@drawable/login_bg"--><!--android:orientation="vertical"--><!--tools:context=".view.LoginActivity">-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/login_bg"
  android:orientation="vertical"
  tools:context=".modules.forgetpassword.ForgetPasswordActivity">

  <android.support.constraint.Guideline
    android:id="@+id/left_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="@dimen/guideline_left" />

  <android.support.constraint.Guideline
    android:id="@+id/right_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="@dimen/guideline_right" />

  <android.support.constraint.Guideline
    android:id="@+id/top_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0" />

  <android.support.constraint.Guideline
    android:id="@+id/bottom_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="178dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintGuide_percent="1" />

  <LinearLayout
    android:id="@+id/wrapper"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
    app:layout_constraintRight_toRightOf="@+id/right_guideline"
    app:layout_constraintTop_toTopOf="@+id/top_guideline">

    <ImageView
      android:layout_width="@dimen/brand_width"
      android:layout_height="@dimen/brand_height"
      android:layout_marginTop="80dp"
      android:src="@drawable/brand"/>

    <LinearLayout
      android:id="@+id/edit_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/edit_container_top"
      android:paddingVertical="@dimen/edit_container__padding"
      android:background="@drawable/round_rect_shape"
      android:gravity="center"
      android:orientation="vertical">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="false"
        app:counterMaxLength="11">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/mobile_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:hint="请输入手机号"
          android:inputType="phone"
          android:paddingLeft="15dp" />

      </android.support.design.widget.TextInputLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
          android:id="@+id/til_verifycode"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/verifycode_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:hint="请输入验证码"
            android:inputType="number"
            android:paddingLeft="15dp" />



        </android.support.design.widget.TextInputLayout>
        <com.orange.mall.app.widgets.VerifyCodeButton
          android:id="@+id/btn_fetch_verify_code"
          android:layout_width="wrap_content"
          android:minWidth="100dp"
          android:layout_height="30dp"
          android:layout_alignParentRight="true"
          android:layout_marginRight="@dimen/verify_code__margin_right"
          android:layout_marginBottom="@dimen/verify_code__margin_bottom"
          android:layout_alignBottom="@id/til_verifycode"
          android:gravity="center"
          android:text="@string/fetch_verify_code"
          android:background="@drawable/round_rect_btn_small"
          android:textColor="@color/white"
          android:onClick="sendVerifyCode"
          app:vcb_afterCountdownText="重新获取验证码"
          app:vcb_clickAfterBackground="@drawable/round_rect_btn_small"
          app:vcb_countdownTime="60"/>
      </RelativeLayout>


      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/password_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:hint="@string/reset_passwd"
          android:inputType="textPassword"
          android:paddingLeft="15dp" />
      </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/white"
      android:layout_marginVertical="20dp"/>

    <RelativeLayout
      android:id="@+id/buttons_group"
      android:layout_width="match_parent"
      android:layout_height="@dimen/btn_height"
      android:orientation="vertical">

      <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/round_rect_btn"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:onClick="onConfirmButtonClicked"/>
    </RelativeLayout>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/slogan__margin_bottom"
      android:orientation="vertical"
      android:gravity="center">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/slogan_zh"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/slogan_en"/>
    </LinearLayout>

  </LinearLayout>


</android.support.constraint.ConstraintLayout>
